--- a/examples/coder/frontend/chat_messages.html
+++ b/examples/coder/frontend/chat_messages.html
@@ -14,6 +14,12 @@
         <p class="text-gray-800">
             {{message.content}}
         </p>
+        {% if message.function %}
+        <p>
+            Function args:<br/>
+            {{message.function_args}}
+        </p>
+        {% endif %}
     </div>
 </div>
 {% endfor %} 
