--- a/examples/coder/frontend/chat_messages.html
+++ b/examples/coder/frontend/chat_messages.html
@@ -12,7 +12,7 @@
     </div>
     <div class="content w-full lg:w-7/10 bg-white p-4 rounded-lg shadow-sm">
         <article class="prose">
-{{message.html|raw}}
+{{message.html|safe}}
         </article>
     </div>
 </div>
