--- a/agents/jetpack/frontend/chat.html
+++ b/agents/jetpack/frontend/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <title>a|os Jetpack</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=typography,aspect-ratio"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
