jetpack: move design to own folder

--- a/agents/jetpack/design/design.html
+++ b/agents/jetpack/design/design.html
@@ -18,7 +18,7 @@
             font-family: 'Inconsolata', serif;
         }    
     </style> 
-<body id="body" class="bg-gray-100">
+<body id="body" class="bg-gray-100x">
 
     <div class="fixed left-0 top-0 p-4 flex invisible lg:visible">
         <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-500 dark:text-white">a|os</span>
