--- a/agents/demodata/frontend_data/companies.html
+++ b/agents/demodata/frontend_data/companies.html
@@ -21,45 +21,137 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h2>HTML Table</h2>
+<h2>Companies and Revenue</h2>
 
 <table>
   <tr>
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
+    <th>Revenue</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>QuantumTech Solutions</td>
+    <td>Alice Hamilton</td>
+    <td>USA</td>
+    <td>$5,000,000</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
+    <td>Nova Industries</td>
+    <td>Jordan Smith</td>
     <td>UK</td>
+    <td>$4,500,000</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
+    <td>Orion Enterprises</td>
+    <td>Carlos Diaz</td>
+    <td>Spain</td>
+    <td>$6,200,000</td>
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
+    <td>Pixel Dynamics</td>
+    <td>Chloe Lee</td>
+    <td>South Korea</td>
+    <td>$3,800,000</td>
+  </tr>
+  <tr>
+    <td>Delta Innovations</td>
+    <td>Liam O'Conner</td>
+    <td>Ireland</td>
+    <td>$4,100,000</td>
+  </tr>
+  <tr>
+    <td>GlobeSoft Tech</td>
+    <td>Mohammed Rahman</td>
+    <td>India</td>
+    <td>$5,300,000</td>
+  </tr>
+  <tr>
+    <td>Azure Dynamics</td>
+    <td>Emily Stone</td>
+    <td>Australia</td>
+    <td>$4,700,000</td>
+  </tr>
+  <tr>
+    <td>SolarWave Systems</td>
+    <td>Andre Duval</td>
+    <td>France</td>
+    <td>$5,500,000</td>
+  </tr>
+  <tr>
+    <td>Polaris Solutions</td>
+    <td>Beatrice Schmidt</td>
+    <td>Germany</td>
+    <td>$4,600,000</td>
+  </tr>
+  <tr>
+    <td>Atlas Tech</td>
+    <td>Rafael Ortiz</td>
+    <td>Argentina</td>
+    <td>$3,900,000</td>
+  </tr>
+  <tr>
+    <td>Neptune Networking</td>
+    <td>Sophia Ivanova</td>
+    <td>Russia</td>
+    <td>$5,200,000</td>
+  </tr>
+  <tr>
+    <td>Zenith Dynamics</td>
+    <td>Lucas Tan</td>
+    <td>Singapore</td>
+    <td>$4,400,000</td>
+  </tr>
+  <tr>
+    <td>Helios Tech</td>
+    <td>Grace Wang</td>
+    <td>China</td>
+    <td>$6,000,000</td>
+  </tr>
+  <tr>
+    <td>Nimbus Networks</td>
+    <td>Mason Abdi</td>
+    <td>Kenya</td>
+    <td>$3,600,000</td>
+  </tr>
+  <tr>
+    <td>Stratos Systems</td>
+    <td>Ella Silva</td>
+    <td>Brazil</td>
+    <td>$5,100,000</td>
+  </tr>
+  <tr>
+    <td>Horizon Innovations</td>
+    <td>Noah Jensen</td>
+    <td>Denmark</td>
+    <td>$4,300,000</td>
+  </tr>
+  <tr>
+    <td>Galaxy Gateways</td>
+    <td>Amelia Suzuki</td>
+    <td>Japan</td>
+    <td>$4,800,000</td>
+  </tr>
+  <tr>
+    <td>MeteorTech</td>
+    <td>Luke Njoroge</td>
+    <td>South Africa</td>
+    <td>$4,200,000</td>
+  </tr>
+  <tr>
+    <td>Cosmic Code</td>
+    <td>Isabella Rossi</td>
     <td>Italy</td>
+    <td>$5,400,000</td>
+  </tr>
+  <tr>
+    <td>LunarSoft</td>
+    <td>Benjamin Vargas</td>
+    <td>Mexico</td>
+    <td>$4,900,000</td>
   </tr>
 </table>
+
 
 </body>
 </html>
