jetpack: frontend: fix chat message styling for lists and images, word break if needed

--- a/agents/jetpack/design/design.html
+++ b/agents/jetpack/design/design.html
@@ -75,16 +75,19 @@
                                             </code></pre>
                                     </div>
                                 </div>
-
-
-
-                                <div class="aos-card aos-message">
-                                    <div class="message-author">Dan</div>
-                                    <div class="message-text">get a wikipedia article on a given topic, then summarize it. here is an example: https://en.wikipedia.org/wiki/Operating_system</div>
-                                </div>
                                 <div class="aos-card aos-message message-reply">
                                     <div class="message-author">Agent</div>
-                                    <div class="message-text">Sure, I can help with that. To clarify your request, you want a new Ability that takes a Wikipedia URL as input and returns a summary of the article at that URL, correct?</div>
+                                    <div class="message-text">
+                                        <p>Here is what I generated:</p>
+                                        <p>
+                                            /static/images/icons/wikipedia.png
+                                            Here are the links to the generated objects:
+                                        </p>
+                                        <ul>
+                                            <li><a href="../../../../grit/objects/e6ab312bdfe225e5c5a91f973a7f66190b66399e83afb11157952acac368b94a">id: e6ab312bdfe225e5c5a91f973a7f66190b66399e83afb11157952acac368b94a</a></li>
+                                        </ul>
+                                        <img src="https://images.unsplash.com/photo-1697228428285-8c442346434a?auto=format&fit=crop&q=80&w=3870&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
+                                    </div>
                                 </div>
                                 <div class="aos-card aos-message">
                                     <div class="message-author">Dan</div>
